package mob;

import "base.proto";

option java_package = "es.tid.cosmos.mobility.data";
option java_outer_classname = "MobProtocol";

message MobData {
    enum Type {
        INVALID = 0;
        NULL = 1;
        INT = 2;
        CDR = 3;
        CELL = 4;
        BTS = 5;
        CLUSTER = 6;
        NODE_BTS_DAY = 7;
        BTS_COUNTER = 8;
        POI = 9;
    }

    required Type type = 1;
    optional uint32 int = 2;
    optional Cdr cdr = 3;
    optional Cell cell = 4;
    optional Bts bts = 5;
    optional Cluster cluster = 6;
    optional NodeBtsDay nodeBtsDay = 7;
    optional BtsCounter btsCounter = 8;
    optional Poi poi = 9;
}

message Cdr {
    optional uint64 userId = 1;
    optional uint64 cellId = 2;
    optional base.Date date = 3;
    optional base.Time time = 4;
}

message Cell {
    optional uint64 cellId = 1;
    optional uint64 placeId = 2;
    optional uint32 geoloc1 = 3;
    optional uint32 geoloc2 = 4;
    optional double posx = 5;
    optional double posy = 6;
}

message Bts {
    optional uint64 placeId = 1;
    optional uint64 comms = 2;
    optional double posx = 3;
    optional double posy = 4;
    optional double area = 5;
    repeated uint64 adj_bts = 6;
}

message NodeBts {
    optional uint64 userId = 1;
    optional uint32 placeId = 2;
    optional uint32 weekday = 3;
    optional uint32 range = 4;
}

message BtsCounter {
    optional uint64 placeId = 1;
    optional uint32 weekday = 2;
    optional uint32 range = 3;
    optional uint32 count = 4;
}

message NodeBtsDay {
    optional uint64 userId = 1;
    optional uint64 placeId = 2;
    optional uint32 workday = 3;
    optional uint32 count = 4;
}

message NodeMxCounter {
    repeated BtsCounter bts = 1;
    optional uint32 btsLength = 2;
    optional uint32 btsMaxLength = 3;
}

message TwoInt {
    optional uint64 num1 = 1;
    optional uint64 num2 = 2;
}

message DailyVector {
    repeated TwoInt hours = 1;
}

message ClusterVector {
    repeated double coms = 1;
}

message Cluster {
    optional uint32 label = 1;
    optional uint32 labelgroup = 2;
    optional uint32 confident = 3;
    optional double mean = 4;
    optional double distance = 5;
    optional ClusterVector coords = 6;
}

message GLEvent {
    optional uint64 userId = 1;
    optional uint64 placeId = 2;
    optional base.Date date = 3;
    optional base.Time time = 4;
}

message ActivityAreaKey {
    optional uint64 userId = 1;
    optional uint32 month = 2;
    optional bool isWorkDay = 3;
}

message ActivityArea {
    optional uint32 numPos = 1;
    optional uint32 difBtss = 2;
    optional uint32 difMuns = 3;
    optional uint32 difStates = 4;
    optional double masscenterUtmX = 5;
    optional double masscenterUtmY = 6;
    optional double radius = 7;
    optional double diamAreaInf = 8;
}

message TelMonth {
    optional uint64 phone = 1;
    optional uint32 month = 2;
    optional bool workingday = 3;
}

message Poi {
    optional uint32 id = 1;
    optional uint64 node = 2;
    optional uint32 bts = 3;
    optional uint32 labelnode = 4;
    optional uint32 labelgroupnode = 5;
    optional uint32 confidentnode = 6;
    optional double distancenode = 7;
    optional uint32 labelbts = 8;
    optional uint32 labelgroupbts = 9;
    optional uint32 confidentbts = 10;
    optional double distancebts = 11;
    optional uint32 labelnodebts = 12;
    optional uint32 labelgroupnodebts = 13;
    optional uint32 confidentnodebts = 14;
    optional double distancenodebts = 15;
    optional int32 inoutWeek = 16;
    optional int32 inoutWend = 17;
}
